--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vladimir-trifonov/desert-monsters-service-registry/issues"
+  },
+  "dependencies": {
+    "thalassa": "https://github.com/vladimir-trifonov/thalassa.git"
   },
   "homepage": "https://github.com/vladimir-trifonov/desert-monsters-service-registry#readme"
 }
